# vote

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crawler/: .gitignore  Gemfile
front/: Dockerfile  package-lock.json  package.json  patch.js
front/src/: index.html
front/src/app/: app.module.ts
front/src/app/config/: app.config.ts  iapp.config.ts
front/src/app/model/: person.ts
front/src/app/person/: person.component.css  person.component.html  person.component.spec.ts  person.component.ts  person.module.ts
front/src/app/service/: person.service.spec.ts  person.service.ts  websocket.service.ts
migrations/2018-06-08-084348_create_persons/: down.sql  up.sql
public/: index.html
src/: db.rs  main.rs  schema.rs  ws_server.rs
src/api/: index.rs
src/controller/: person.rs
src/model/: db.rs  mod.rs  person.rs  response.rs
src/src/: schema.rs
src/view/: common.rs  mod.rs  person.rs
