[package]
name = "vote"
version = "0.1.0"
authors = ["lon9"]

[dependencies]
actix = "^0.5"
actix-web = "^0.6"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "^0.8"
dotenv = "^0.10"
num_cpus = "^1.0"
env_logger = "^0.5"
futures = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
