[package]
name = "vote"
version = "0.1.0"
authors = ["lon9"]

[dependencies]
rand = "*"
actix = "^0.5"
actix-web = "^0.6"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
diesel = { version = "^1.3.0", features = ["serde_json", "postgres", "chrono", "r2d2"] }
dotenv = "^0.10"
num_cpus = "^1.0"
env_logger = "^0.5"
futures = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
postgres = {version= "^0.15.0", features = ["with-chrono"]}
